+)添加post表单上传文件相关代码

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,4 +17,10 @@
         android:onClick="post"
         android:text="post请求"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="postFormFile"
+        android:text="post上传文件"/>
+
 </LinearLayout>
